--- a/package.json
+++ b/package.json
@@ -27,16 +27,14 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.25.0",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
