--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.34.1",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
@@ -27,12 +30,15 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.25.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
