--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.34.1",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "formidable": "^3.5.1",
