--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.34.1",
@@ -39,6 +40,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
