--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,17 +7,17 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-function": "off",
-    "react/react-in-jsx-scope": "off", // If you're using React 17+
-    "react/prop-types": "off", // If you're using TypeScript for prop types
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
     "react/no-unescaped-entities": "off",
     "import/no-anonymous-default-export": "off",
     
-    // Disable errors related to passing event handlers in Next.js
+    // Disabling various React-related linting rules
     "react/no-unknown-property": "off",
-    "react-hooks/rules-of-hooks": "off", // Disable hook rule warnings
-    "react-hooks/exhaustive-deps": "off", // Disable exhaustive dependencies warnings for hooks
-    "react/jsx-no-bind": "off", // Disable warnings about using inline functions like onClick
-    "react/jsx-props-no-spreading": "off" // Disable props spreading warnings
+    "react-hooks/rules-of-hooks": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "react/jsx-no-bind": "off",
+    "react/jsx-props-no-spreading": "off"
   },
   "overrides": [
     {
